# sortAlgorithmPerformanceMeasurement

./: .gitignore  CMakeLists.txt  README.md  bubble_sort.cpp  createAscData.cpp  insert_sort.cpp  main.cpp  measurement.sh  merge_sort_noSpace.cpp  merge_sort_space.cpp  select_sort.cpp
algorithms/: insert_sort.cpp  quick_sort.cpp
testCase/: asc_18.txt  asc_19.txt  rnd_10_0.txt  rnd_10_1.txt  rnd_10_2.txt  rnd_10_3.txt  rnd_10_4.txt  rnd_10_5.txt  rnd_10_6.txt  rnd_10_7.txt  rnd_11_0.txt  rnd_11_1.txt  rnd_11_2.txt  rnd_11_3.txt  rnd_11_4.txt  rnd_11_5.txt  rnd_11_6.txt  rnd_11_7.txt  rnd_12_0.txt  rnd_12_1.txt  rnd_12_2.txt  rnd_12_3.txt  rnd_12_4.txt  rnd_12_5.txt  rnd_12_6.txt  rnd_12_7.txt  rnd_13_0.txt  rnd_13_1.txt  rnd_13_2.txt  rnd_13_3.txt  rnd_13_4.txt  rnd_13_5.txt  rnd_13_6.txt  rnd_13_7.txt  rnd_14_0.txt  rnd_14_1.txt  rnd_14_2.txt  rnd_14_3.txt  rnd_14_4.txt  rnd_14_5.txt  (+98 more)
testCase/creator/: create.sh  createAscData  createDescData  createDescData.cpp  createRandomData  createRandomData.cpp
