cmake_minimum_required(VERSION 3.7)

if(NOT DEFINED algorithm)
    set(algorithm bubble_sort)
endif()

if(algorithm STREQUAL merge_sort_space)
    add_definitions(-DUSE_MERGE_SORT_SPACE)
    message(STATUS "use merge sort with work space")
elseif(algorithm STREQUAL merge_sort_no_space)
    add_definitions(-DUSE_MERGE_SORT_NO_SPACE)
    message(STATUS "use merge sort with no work space")
elseif(algorithm STREQUAL quick_sort)
    add_definitions(-DUSE_QUICK_SORT)
    message(STATUS "use quick sort")
elseif(algorithm STREQUAL bubble_sort)
    add_definitions(-DUSE_BUBBLE_SORT)
    message(STATUS "use bubble sort")
elseif(algorithm STREQUAL select_sort)
    add_definitions(-DUSE_SELECT_SORT)
    message(STATUS "use select sort")
elseif(algorithm STREQUAL insert_sort)
    add_definitions(-DUSE_INSERT_SORT)
    message(STATUS "use insert sort")
elseif(DEFINED algorithm)
    message(FATAL_ERROR "invalid algorithm")
endif()

add_executable(main main.cpp)
